--- a/introdução a html/style.css
+++ b/introdução a html/style.css
@@ -10,10 +10,17 @@ body{
 .post_title{
     font-size: 16px;
     font-style: italic;
+    margin: 0;
+    margin-bottom: 15px;
 }
 .post{
     background: #fff;
     padding: 10px;
     border: 3px solid #000;
     margin: 10px;
+}
+
+.post_content{
+    margin: 0;
+    margin-bottom: 15px;
 }
